--- a/.vuesion/storybook/_theme.scss
+++ b/.vuesion/storybook/_theme.scss
@@ -12,7 +12,7 @@
 
   // Typography
   fontBase: $font-family;
-  fontCode: 'monospace';
+  fontCode: 'Courier New';
 
   // Text colors
   textColor: palette-color-level('grey', 100);
