--- a/src/app/shared/designSystem/_variables.scss
+++ b/src/app/shared/designSystem/_variables.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 
 /* Branding */
-@import "variables/color-palette";
+@import 'variables/color-palette';
 @import 'variables/spacings';
 @import 'variables/typo';
 @import 'variables/grid';
