--- a/src/app/shared/designSystem/global.scss
+++ b/src/app/shared/designSystem/global.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 @import 'variables';
-@import "themes/light";
-@import "themes/dark";
+@import 'themes/light';
+@import 'themes/dark';
 
 body {
   color: var(--brand-text-color);
