--- a/src/app/shared/designSystem/variables/_badge.scss
+++ b/src/app/shared/designSystem/variables/_badge.scss
@@ -10,7 +10,7 @@ $badge-margin: 0;
 $badge-font-size: $font-size-small;
 $badge-line-height: inherit;
 $badge-letter-spacing: inherit;
-$badge-border-radius: var(--brand-border-radius);
+$badge-border-radius: var(--brand-border-radius-sm);
 $badge-font-weight: $font-weight-regular;
 
 $badge-outlined-border-width: 1px;
