--- a/src/app/shared/designSystem/variables/_button.scss
+++ b/src/app/shared/designSystem/variables/_button.scss
@@ -8,12 +8,12 @@
 
 $button-font-family: $font-family;
 $button-padding: $space-8 $space-12;
-$button-margin: 0 $space-8 0 0;
+$button-margin: 0;
 $button-min-width: $space-32;
 $button-height: auto;
 $button-font-size: $font-size;
 $button-font-weight: 400;
-$button-border-radius: var(--brand-border-radius);
+$button-border-radius: var(--brand-border-radius-sm);
 $button-shadow: none;
 $button-transition: all 300ms cubic-bezier(0.25, 0.8, 0.25, 1);
 $button-active-shadow: 0 12px 20px rgba(0, 0, 0, 0.2), 0 10px 10px rgba(0, 0, 0, 0.18);
