--- a/src/app/shared/designSystem/variables/_toggle.scss
+++ b/src/app/shared/designSystem/variables/_toggle.scss
@@ -1,7 +1,7 @@
 $toggle-bg: var(--brand-border-color);
 $toggle-margin: 0 0 $space-12 0;
 $toggle-shadow: none;
-$toggle-border-radius: var(--brand-border-radius);
+$toggle-border-radius: var(--brand-border-radius-sm);
 $toggle-width: $space-40;
 $toggle-height: $space-12;
 $toggle-transition: all var(--brand-transition-duration) ease-in-out;
