--- a/src/app/shared/designSystem/variables/_select.scss
+++ b/src/app/shared/designSystem/variables/_select.scss
@@ -3,7 +3,7 @@ $select-margin: 0;
 $select-padding: $space-8 0;
 $select-color: var(--brand-text-color);
 $select-font-family: $font-family;
-$select-font-size: $font-size;
+$select-font-size: $font-size-md;
 $select-font-weight: $font-weight-light;
 $select-arrow-color: var(--brand-secondary);
 
