--- a/src/app/shared/designSystem/themes/dark.scss
+++ b/src/app/shared/designSystem/themes/dark.scss
@@ -1,37 +1,49 @@
 :root.dark {
   /* Brand Variations */
-  --brand-default: #{palette-color-level('grey', 20)};
-  --brand-default-hover: #{palette-color-level('grey', 10)};
-  --brand-primary: #{palette-color-level('coral', 50)};
-  --brand-primary-hover: #{palette-color-level('coral', 40)};
-  --brand-secondary: #{palette-color-level('blue', 50)};
-  --brand-secondary-hover: #{palette-color-level('blue', 40)};
-  --brand-success: #{palette-color-level('green', 40)};
+  --brand-default: #{palette-color-level('grey', 100)};
+  --brand-default-hover: #{palette-color-level('grey', 70)};
+  --brand-default-focus: #{palette-color-level('grey', 30)};
+  --brand-default-active: #{palette-color-level('grey', 90)};
+  --brand-primary: #{palette-color-level('blue', 70)};
+  --brand-primary-hover: #{palette-color-level('blue', 30)};
+  --brand-primary-focus: #{palette-color-level('blue', 30)};
+  --brand-primary-active: #{palette-color-level('blue', 100)};
+  --brand-secondary: #{palette-color-level('coral', 70)};
+  --brand-secondary-hover: #{palette-color-level('coral', 30)};
+  --brand-secondary-focus: #{palette-color-level('coral', 30)};
+  --brand-secondary-active: #{palette-color-level('coral', 100)};
+  --brand-success: #{palette-color-level('green', 70)};
   --brand-success-hover: #{palette-color-level('green', 30)};
-  --brand-warning: #{palette-color-level('yellow', 40)};
+  --brand-success-focus: #{palette-color-level('green', 30)};
+  --brand-success-active: #{palette-color-level('green', 100)};
+  --brand-warning: #{palette-color-level('yellow', 70)};
   --brand-warning-hover: #{palette-color-level('yellow', 30)};
-  --brand-danger: #{palette-color-level('red', 50)};
-  --brand-danger-hover: #{palette-color-level('red', 40)};
+  --brand-warning-focus: #{palette-color-level('yellow', 30)};
+  --brand-warning-active: #{palette-color-level('yellow', 100)};
+  --brand-danger: #{palette-color-level('red', 70)};
+  --brand-danger-hover: #{palette-color-level('red', 30)};
+  --brand-danger-focus: #{palette-color-level('red', 30)};
+  --brand-danger-active: #{palette-color-level('red', 100)};
 
   /* Background Colors */
   --brand-bg-color: #{palette-color-level('grey', 90)};
-  --brand-bg-color-variant: #{palette-color-level('grey', 80)};
-  --brand-bg-color-inverse: #{palette-color-level('grey', 20)};
-  --brand-bg-color-variant-inverse: #{palette-color-level('grey', 50)};
+  --brand-bg-color-variant: #{palette-color-level('grey', 70)};
+  --brand-bg-color-inverse: #{palette-color-level('grey', 30)};
+  --brand-bg-color-variant-inverse: #{palette-color-level('grey', 70)};
 
   /* Text Colors */
   --brand-text-color: #{palette-color-level('grey', 10)};
-  --brand-text-secondary-color: #{palette-color-level('grey', 30)};
+  --brand-text-secondary-color: #{palette-color-level('grey', 50)};
   --brand-text-color-inverse: #{palette-color-level('grey', 100)};
-  --brand-text-secondary-color-inverse: #{palette-color-level('grey', 60)};
+  --brand-text-secondary-color-inverse: #{palette-color-level('grey', 70)};
 
   /* Link Color */
-  --brand-link-color: #{palette-color-level('green', 40)};
-  --brand-link-hover-color: #{palette-color-level('green', 50)};
+  --brand-link-color: #{palette-color-level('green', 50)};
+  --brand-link-hover-color: #{palette-color-level('green', 70)};
 
   /* Borders */
-  --brand-border-color: #{palette-color-level('grey', 70)};
-  --brand-border-color-inverse: #{palette-color-level('grey', 30)};
+  --brand-border-color: #{palette-color-level('grey', 90)};
+  --brand-border-color-inverse: #{palette-color-level('grey', 50)};
   --brand-border-radius-sm: #{$space-4};
   --brand-border-radius-md: #{$space-8};
   --brand-border-radius-lg: #{$space-16};
@@ -40,7 +52,7 @@
   --brand-shadow-sm: 0 1px 1px 0 rgba(18, 19, 21, 0.12);
   --brand-shadow-md: 0 -1px 2px 0 rgba(18, 19, 21, 0.12), 0 2px 4px 0 rgba(18, 19, 21, 0.12);
   --brand-shadow-lg: 0 0 4px 0 rgba(18, 19, 21, 0.12), 0 4px 12px 0 rgba(18, 19, 21, 0.12);
-  --brand-shadow-outline: 0 0 0 #{$space-8} #{rgba(palette-color-level('blue', 50), 0.5)};
+  --brand-shadow-outline: 0 0 0 #{$space-8} #{rgba(palette-color-level('blue', 70), 0.5)};
 
   /* Animation Language */
   --brand-transition-duration: 250ms;
