--- a/src/app/shared/designSystem/variables/_badge.scss
+++ b/src/app/shared/designSystem/variables/_badge.scss
@@ -7,7 +7,7 @@
 );
 $badge-padding: $space-4 $space-8;
 $badge-margin: 0;
-$badge-font-size: $font-size-small;
+$badge-font-size: $font-size-sm;
 $badge-line-height: inherit;
 $badge-letter-spacing: inherit;
 $badge-border-radius: var(--brand-border-radius-sm);
