--- a/src/app/shared/designSystem/variables/_card.scss
+++ b/src/app/shared/designSystem/variables/_card.scss
@@ -9,9 +9,9 @@ $card-header-padding: $space-8 $space-16;
 $card-header-image-size: $space-40;
 $card-header-image-border-radius: 50%;
 $card-header-image-margin: $space-8 $space-12 0 0;
-$card-header-title-font-size: $font-size;
+$card-header-title-font-size: $font-size-md;
 $card-header-title-font-weight: $font-weight-regular;
-$card-header-subtitle-font-size: $font-size;
+$card-header-subtitle-font-size: $font-size-md;
 $card-header-subtitle-font-weight: $font-weight-light;
 $card-header-subtitle-color: var(--brand-text-secondary-color);
 
