--- a/src/app/shared/designSystem/themes/light.scss
+++ b/src/app/shared/designSystem/themes/light.scss
@@ -28,14 +28,20 @@
   /* Background Colors */
   --brand-bg-color: #{palette-color-level('grey', 10)};
   --brand-bg-color-variant: #{palette-color-level('grey', 30)};
+
+  /* Background Colors Inverse */
   --brand-bg-color-inverse: #{palette-color-level('grey', 100)};
   --brand-bg-color-variant-inverse: #{palette-color-level('grey', 90)};
 
   /* Text Colors */
   --brand-text-color: #{palette-color-level('grey', 100)};
   --brand-text-secondary-color: #{palette-color-level('grey', 70)};
+  --brand-text-tertiary-color: #{palette-color-level('grey', 30)};
+
+  /* Text Colors Inverse */
   --brand-text-color-inverse: #{palette-color-level('grey', 10)};
-  --brand-text-secondary-color-inverse: #{palette-color-level('grey', 30)};
+  --brand-text-secondary-color-inverse: #{palette-color-level('grey', 50)};
+  --brand-text-tertiary-color-inverse: #{palette-color-level('grey', 90)};
 
   /* Link Color */
   --brand-link-color: #{palette-color-level('blue', 90)};
