--- a/src/app/shared/designSystem/variables/_input.scss
+++ b/src/app/shared/designSystem/variables/_input.scss
@@ -1,28 +1,37 @@
-$input-border-bottom: 1px solid var(--brand-border-color);
-$input-background-color: transparent;
-$input-padding: $space-8 0;
-$input-margin: 0 0 $space-20 0;
-$input-font-family: $font-family;
-$input-font-size: inherit;
-$input-font-weight: $font-weight-light;
+$input-label-padding: 0 0 $space-4 0;
+$input-label-color: var(--brand-text-secondary-color);
+$input-label-font-size: $font-size-sm;
+$input-label-font-weight: $font-weight-regular;
+$input-label-line-height: $line-height-sm - $space-4;
+
+$input-label-error-color: var(--brand-danger);
+
+$input-padding: ($space-2 + $space-4) $space-8;
 $input-color: var(--brand-text-color);
-$input-height: auto;
+$input-background-color: transparent;
+$input-font-family: $font-family;
+$input-font-size: $font-size-md;
+$input-font-weight: $font-weight-light;
+$input-line-height: $line-height-sm - $space-2;
+$input-border: 1px solid var(--brand-border-color);
+$input-border-radius: var(--brand-border-radius-sm);
+
 $input-error-color: var(--brand-danger);
+$input-background-error-color: palette-color-level('red', 10);
+$input-border-error: 1px solid var(--brand-danger);
 
-$input-placeholder-top: 0;
-$input-placeholder-color: $input-color;
-$input-placeholder-font-size: $input-font-size;
-$input-placeholder-font-weight: $font-weight-light;
-$input-placeholder-active-font-size: 75%;
-$input-placeholder-active-font-weight: $font-weight-regular;
-$input-placeholder-active-font-color: var(--brand-secondary);
-$input-placeholder-active-height: $space-12;
+$input-border-hover: 1px solid var(--brand-border-color-inverse);
 
-$input-bar-height: 2px;
-$input-bar-color: var(--brand-secondary);
+$input-border-focus: 1px solid var(--brand-primary);
 
-$input-message-height: $space-20;
-$input-message-padding: 0;
-$input-message-color: $input-color;
-$input-message-font-size: 75%;
+$input-placeholder-color: var(--brand-text-secondary-color);
+
+$input-placeholder-error-color: palette-color-level('red', 50);
+
+$input-message-color: var(--brand-text-tertiary-color);
+$input-message-font-size: $font-size-sm;
+$input-message-line-height: $line-height-sm - $space-4;
 $input-message-font-weight: $font-weight-regular;
+$input-message-padding: $space-2 0 $space-4 0;
+
+$input-message-error-color: var(--brand-danger);
