refactor(vue-grid): use composition api + re-design (#501)
related to #487

--- a/.vuesion/storybook/_theme.scss
+++ b/.vuesion/storybook/_theme.scss
@@ -1,7 +1,7 @@
 @import '~@/app/shared/design-system';
 
 :export {
-  base: 'light';
+  base: 'dark';
   colorPrimary: palette-color-level('coral', 50);
   colorSecondary: palette-color-level('blue', 50);
   // UI
