fix: got nav bar hamburger button to display

--- a/src/assets/designSystem/themes/light.scss
+++ b/src/assets/designSystem/themes/light.scss
@@ -1,4 +1,4 @@
-:root.light, :root {
+:root, :root.light {
   /* Brand Variations */
   --brand-default: #{palette-color-level('grey', 90)};
   --brand-default-hover: #{palette-color-level('grey', 30)};
